lookbook - shop by putfit - backend full align force fixes

--- a/includes/gbt-blocks/lookbook_shop_by_outfit/assets/css/backend/editor.css
+++ b/includes/gbt-blocks/lookbook_shop_by_outfit/assets/css/backend/editor.css
@@ -1,78 +1,80 @@
-.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] {
-  max-width: 100% !important;
-  padding: 0; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .editor-block-list__block-edit.block-editor-block-list__block-edit {
-    padding: 0;
-    margin: 0 -44px; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_hero_section_content {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    position: relative; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_hero_item .gbt_18_lookbook_sts_hero_section_content {
-    min-height: 400px; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_hero_media_upload {
-    text-align: left;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 1; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_text {
-    display: table-cell;
-    vertical-align: middle;
-    padding-left: 50px;
-    padding-right: 50px; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_subtitle,
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_title {
-    text-align: center;
-    line-height: 1.4; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_subtitle {
-    text-transform: uppercase;
-    margin-top: 10px; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_title {
-    font-size: 36px; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_subtitle {
-    font-size: 12px; }
-  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_scroll_down_button {
-    width: 35px;
-    height: 35px;
-    padding: 5px 3px 3px;
-    border: 1px solid #000;
-    position: relative;
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_hero_section_content {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: relative; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_hero_item .gbt_18_lookbook_sts_hero_section_content {
+  min-height: 400px; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_hero_media_upload {
+  text-align: left;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 1; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_text {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 50px;
+  padding-right: 50px; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_subtitle,
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_title {
+  text-align: center;
+  line-height: 1.4; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_subtitle {
+  text-transform: uppercase;
+  margin-top: 10px; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_title {
+  font-size: 36px; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_hero_section_subtitle {
+  font-size: 12px; }
+
+.editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_scroll_down_button {
+  width: 35px;
+  height: 35px;
+  padding: 5px 3px 3px;
+  border: 1px solid #000;
+  position: relative;
+  display: inline-block;
+  border-radius: 35px;
+  position: absolute;
+  bottom: 80px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  cursor: pointer; }
+  .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_scroll_down_button:before {
+    content: '';
+    border: solid black;
+    border-width: 0 1px 1px 0;
     display: inline-block;
-    border-radius: 35px;
+    padding: 5px;
     position: absolute;
-    bottom: 80px;
+    top: 23%;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
     margin: 0 auto;
     left: 0;
     right: 0;
-    cursor: pointer; }
-    .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] .gbt_18_lookbook_sts_scroll_down_button:before {
-      content: '';
-      border: solid black;
-      border-width: 0 1px 1px 0;
-      display: inline-block;
-      padding: 5px;
-      position: absolute;
-      top: 23%;
-      -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      transform: rotate(45deg);
-      margin: 0 auto;
-      left: 0;
-      right: 0;
-      width: 0; }
+    width: 0; }
 
 .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"][data-align="wide"] .gbt_18_lookbook_sts_hero_item .gbt_18_lookbook_sts_hero_section_content {
   min-height: 500px; }
@@ -140,7 +142,8 @@
     margin-top: 0; }
 
 body.block-editor-page .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit-product"] {
-  max-width: 100%; }
+  margin-left: 0;
+  margin-right: 0; }
 
 .gbt_18_editor_lookbook_sts_product_content {
   width: 100%;
