--- a/includes/gbt-blocks/lookbook_shop_by_outfit/assets/scss/backend/lookbook.scss
+++ b/includes/gbt-blocks/lookbook_shop_by_outfit/assets/scss/backend/lookbook.scss
@@ -1,11 +1,4 @@
 .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit"] {
-  max-width: 100% !important;
-  padding: 0;
-
-  .editor-block-list__block-edit.block-editor-block-list__block-edit {
-    padding: 0;
-    margin: 0 -44px;
-  }
 
   .gbt_18_lookbook_sts_hero_section_content {
     background-size: cover;
@@ -35,7 +28,6 @@
     vertical-align: middle;
     padding-left: 50px;
     padding-right: 50px;
-    // position: relative;
   }
 
   .gbt_18_hero_section_subtitle,
