--- a/includes/gbt-blocks/lookbook_shop_by_outfit/assets/scss/backend/product.scss
+++ b/includes/gbt-blocks/lookbook_shop_by_outfit/assets/scss/backend/product.scss
@@ -1,5 +1,6 @@
 body.block-editor-page .editor-block-list__block[data-type="getbowtied/lookbook-shop-by-outfit-product"] {
-    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .gbt_18_editor_lookbook_sts_product_content {
